# CMake_HelloWorld

./: .gitignore  README.md
src/: CMakeLists.txt  conanbuildinfo.cmake  main.cpp
src/Header_Files/: hash.hpp  myclass.hpp
src/Ressource_Files/: myclass.cpp
